# AiZO_projekt2

./: .gitignore  CMakeLists.txt  main.cpp
headers/algorithms/: algorithm.h  bellmanFord.h  dijkstra.h  kruskal.h  prim.h
headers/graphs/: edge.h  graph.h  list.h
headers/graphs/kruskal/: edgeWithStart.h  listWithStart.h
sources/algorithms/: algorithm.cpp  bellmanFord.cpp  dijkstra.cpp  kruskal.cpp  prim.cpp
sources/graphs/: edge.cpp  graph.cpp  list.cpp
sources/graphs/kruskal/: edgeWithStart.cpp  listWithStart.cpp
sources/main/: main.cpp
